trace_decoder/src/type1/snapshots/trace_decoder__type1__witness__witness_test_vectors-9.snap
---
source: trace_decoder/src/type1/witness.rs
expression: parsed
---
Witness {
    header: V1Header,
    instructions: NonEmpty {
        inner: [
            Hash {
                raw_hash: [
                    166,
                    136,
                    91,
                    55,
                    49,
                    112,
                    45,
                    166,
                    46,
                    142,
                    74,
                    143,
                    88,
                    74,
                    196,
                    106,
                    127,
                    104,
                    34,
                    244,
                    226,
                    186,
                    80,
                    251,
                    169,
                    2,
                    246,
                    123,
                    21,
                    136,
                    210,
                    59,
                ],
            },
            Leaf {
                key: NonEmpty {
                    inner: [
                        2,
                        128,
                        21,
                        101,
                        126,
                        41,
                        141,
                        53,
                        41,
                        14,
                        105,
                        98,
                        139,
                        224,
                        61,
                        145,
                        247,
                        77,
                        97,
                        60,
                        175,
                        58,
                        253,
                        190,
                        9,
                        19,
                        140,
                        250,
                        65,
                        94,
                        254,
                        47,
                        80,
                    ],
                },
                value: NonEmpty {
                    inner: [
                        222,
                        173,
                        190,
                        239,
                    ],
                },
            },
            AccountLeaf {
                key: NonEmpty {
                    inner: [
                        2,
                        24,
                        178,
                        137,
                        147,
                        106,
                        8,
                        116,
                        204,
                        206,
                        230,
                        87,
                        18,
                        200,
                        140,
                        218,
                        160,
                        163,
                        5,
                        176,
                        4,
                        211,
                        253,
                        162,
                        148,
                        43,
                        43,
                        45,
                        197,
                        79,
                        20,
                        246,
                        17,
                    ],
                },
                nonce: None,
                balance: Some(
                    1000000000,
                ),
                has_code: true,
                has_storage: true,
            },
        ],
    },
}
